<resources>
    <string name="app_name">TV2App</string>
    <string name="title_activity_register">Registrer Bruger</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nfc_button_description">Scan an NFC Chip to unlock a treasure</string>
    <string name="nfc_button_title">Scan a treasure</string>
    <string name="leaderbord_button_title">Leaderbord</string>
    <string name="leaderboard_button_description">See how you are competing against CO-Workers</string>
    <string name="hint_button_title">Hint</string>
    <string name="hint_button_description">Check for hints to see where treasures lurk</string>
    <string name="start_fragment_title">Forside</string>
    <string name="leaderboard_fragment_title">Leaderboard</string>
    <string name="Hint_fragment_title">Hint</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="besvar">Besvar</string>
    <string name="point_amount">%i Points på spil</string>
    <string name="title_activity_leaderboard">LeaderboardActivity</string>
</resources>